Changes with Apache 1.3.25

  *) Recognize platform specific root directories (other than 
     leading slash) in mod_rewrite for filename rewrite rules.
     Bugz# 7492  [William Rowe]

  *) For supported versions of Darwin, place dynamically loaded
     Apache extensions' public symbols into the global symbol
     table. This allows dynamically loaded PHP extensions.
     [Marko Karppinen <markonen@php.net>]

  *) Correct proxy to be able to handle the unexpected 100-continue
     reponses sent during PUT or POST requests. [Graham Leggett]

  *) Correct a timeout problem within proxy which would force long
     or slow POST requests to close after 300 seconds.
     [Martin Lichtin <martin@lichtin.net>, Brian Bothwell
     <brian.bothwell@wisdomtools.com>]

  *) Add support for dechunking chunked responses in proxy.
     [Graham Leggett]

  *) Made AB's use of the Host: header rfc2616 compliant
     by Taisuke Yamada <tai@iij.ad.jp> [Dirl-Willem van Gulik].
     
  *) Update the Redhat Layout to match Redhat version 7. PR BZ-7422
     [Joe Orton] 

  *) Add some popular types to the mime magic file.  PR 7730.
     [Linus Walleij <triad@df.lth.se>, Justin Erenkrantz]

  *) Tighten up the overridden-Server-header bugfix in the proxy, by
     only overriding if the request is a proxy request. It has been
     pointed out that the previous fix allows CGIs and modules to
     override the Server header, which is change to previous behavior.
     [Graham Leggett, Joshua Slive]

  *) Another fix for the multiple-cookie header bug in proxy. With some
     luck this bug is actually now dead. [Graham Leggett]

Changes with Apache 1.3.24

  *) Fixed a segfault in mod_include when #if, #elif, #else, or #endif
     directives were improperly terminated.  [Cliff Woolley]

  *) Win32 Security: CAN-2002-0061
     Introduce proper escaping of command.com and cmd.exe for Win32.
     These patches close vulnerability CAN-2002-0061, identified and